<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Aluno</string>
    <string name="action_new">Novo</string>
    <string name="hello_world">Hello world!</string>
    <string name="olamundo">Ola Mundo</string>
    <string name="title_activity_form">FormActivity</string>
    <string name="nome">Nome:</string>
    <string name="telefone">Telefone:</string>
    <string name="email">Email:</string>
    <string name="endereco">Endereço:</string>
    <string name="curso">Curso:</string>
    <string name="sexo">Sexo:</string>
    <string name="masc">Masculino</string>
    <string name="fem">Feminino</string>
    <string name="matriculado">Matriculiado</string>
    <string name="salvar">Salvar</string>
    <string name="btEnviar">Enviar</string>
    <string name="title_activity_buscar">Buscar</string>
    <string name="action_settings">Buscar</string>
    <string name="action_preferences">Configurações</string>
    <string name="action_upload">Upload</string>
    <string name="action_download">Download</string>
    <string name="activity_busca_btBuscar">Buscar</string>
    <string name="activity_busca_rbNome">Nome</string>
    <string name="activity_busca_rbId">Id</string>
    <string name="activity_busca_tvInfo">"Buscar por "</string>
    <string name="activity_busca_etBuscarHind">Insira o nome ou id</string>
    <string name="title_activity_teste">Activity Teste</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_activity_teste">ActivityTeste</string>
    <string name="title_activity_mapa">MapaActivity</string>
    <string name="title_activity_preferences">PreferencesActivity</string>
    <string name="ip">IP:</string>
    <string name="port">Porta:</string>
    <string name="ipDefault">10.0.2.2</string>
    <string name="portDefault">8080</string>
    <string name="btConectar">Conectar</string>

</resources>