<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".FormActivity" >

	<LinearLayout 
	    android:id="@+id/LinearLayout1"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:orientation="vertical" >
	
	    <TextView
	        android:layout_gravity="bottom"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:gravity="center_horizontal"
	        android:text="Configurações"
	        android:textSize="20sp" />
	
	    <TextView
	        android:id="@+id/tvIp"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/ip"
	        android:textSize="17sp"
	        android:textStyle="bold" />
	
	    <EditText
	        android:id="@+id/etIp"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:lines="1"
	        android:text="@string/ipDefault" >
	
	        <requestFocus />

	    </EditText>
	
	    <TextView
	        android:id="@+id/tvPort"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/port"
	        android:textSize="17sp"
	        android:textStyle="bold" />
	
	    <EditText
	        android:id="@+id/etPort"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:lines="1"
	        android:text="@string/portDefault" >

	    </EditText>
	
	    <Button
	        android:id="@+id/btConnect"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/btConectar" />
	    
	</LinearLayout>
</ScrollView>